Fixed issue that caused navigation bar dropdown menus to be cut off inside the navigation bar

--- a/styles/screen.css
+++ b/styles/screen.css
@@ -300,7 +300,6 @@ html.casper .site-nav {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  overflow: hidden;
   height: 64px;
   font-size: 1.3rem;
 }
